# llm_engeneer

./: app_streamlit.py  main.py  pyproject.toml  vols.db
semaine1/: Guide to Jupyter.ipynb  Intermediate Python.ipynb  day1.ipynb  day2 EXERCISE.ipynb  day5.ipynb  diagnostics.py  troubleshooting.ipynb  week1 EXERCISE.ipynb
week1/: day1_gemini.ipynb  day1_gpt.ipynb  day2 EXERCISE.ipynb  day2.ipynb  day4.ipynb  day5.ipynb  day5_gemini.ipynb  scraper.py  weak1 sol.ipynb  week1 EXERCISE.ipynb
week1/community-contributions/: day1_first_llm_videotranscript_summary.ipynb
week2/: biblio_AI.ipynb  day1.ipynb  day2.ipynb  day3.ipynb  day4.ipynb  day5.ipynb  day5_gemini.ipynb  day5_ollama.ipynb  vols.db
week2/community-contributions/: day2_message_interface_with_models.ipynb  day4-airlines-project-fullyCustomize.ipynb  test_gemini.ipynb
week4/: day3.ipynb  day4.ipynb
week5/: day1.ipynb  day2.ipynb  day3.ipynb  day4.ipynb  day5.ipynb  evaluation.py  evaluation_streamlit.py  generate_tests.py
week5/evaluation/: __init__.py  eval.py  test.py  tests.jsonl
week5/implementation/: __init__.py  answer.py  ingest.py
week5/preprocessed_db/: chroma.sqlite3
week8/: deal_agent_framework.py  hello.py  items.py  keep_warm.py  llama.py  log_utils.py  price_is_right.py  price_is_right_final.py  pricer_ephemeral.py  pricer_service.py  pricer_service2.py  testing.py
week8/agents/: agent.py  deals.py  ensemble_agent.py  frontier_agent.py  messaging_agent.py  planning_agent.py  random_forest_agent.py  scanner_agent.py  specialist_agent.py
