[project]
name = "llm-engeneering"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.79.0",
    "beautifulsoup4>=4.14.3",
    "google-genai>=1.63.0",
    "google-generativeai>=0.8.6",
    "gradio>=5.0",
    "gtts>=2.5.4",
    "huggingface-hub>=1.4.1",
    "ipywidgets>=8.1.8",
    "ollama>=0.6.1",
    "openai>=2.21.0",
    "pillow>=12.1.1",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "rich>=14.3.2",
    "streamlit>=1.55.0",
    "tiktoken>=0.12.0",
]
