[project]
name = "llm-engeneering"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.79.0",
    "beautifulsoup4>=4.14.3",
    "chromadb>=1.5.5",
    "fastembed>=0.8.0",
    "google-genai>=1.63.0",
    "google-generativeai>=0.8.6",
    "gradio>=5.0",
    "groq>=0.37.1",
    "gtts>=2.5.4",
    "huggingface-hub>=1.4.1",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "langchain>=1.2.13",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.1",
    "langchain-openai>=1.1.12",
    "langchain-postgres>=0.0.17",
    "langchain-text-splitters>=1.1.1",
    "litellm>=1.83.0",
    "nbformat>=5.10.4",
    "numpy>=2.4.4",
    "ollama>=0.6.1",
    "openai>=2.21.0",
    "pgvector>=0.3.6",
    "pillow>=12.1.1",
    "plotly>=6.6.0",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "rich>=14.3.2",
    "scikit-learn>=1.8.0",
    "streamlit>=1.55.0",
    "tabulate>=0.10.0",
    "tiktoken>=0.12.0",
    "use>=0.1.0",
]
